# food-app

./: .env.example  .gitignore  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0e2925feaeb9_initial_schema.py  53887de23c05_phase_2_recipes_meal_plans_grocery_.py  6726681516a1_custom_nutrition_targets_replace_fixed_.py  9f4a0391063b_trusted_sources_and_recipe_attribution.py
backend/app/: config.py  dependencies.py  main.py
backend/app/ai/: client.py  context.py  orchestrator.py  prompts.py  tool_handlers.py  tools.py
backend/app/db/: session.py
backend/app/models/: __init__.py  base.py  chat.py  family.py  grocery.py  meal_plan.py  nutrition.py  recipe.py  user.py
backend/app/routers/: auth.py  chat.py  dashboard.py  family.py  grocery.py  meal_plans.py  nutrition.py  recipes.py
backend/app/schemas/: auth.py  chat.py  family.py  grocery.py  meal_plan.py  nutrition.py  recipe.py
backend/app/services/: auth_service.py  chat_service.py  family_service.py  grocery_service.py  meal_plan_service.py  nutrition_service.py  pdf_service.py  recipe_service.py  search_service.py
mobile/: App.tsx  app.json  package-lock.json  package.json
mobile/src/components/chat/: ChatInput.tsx  (+4 more)
mobile/src/navigation/: AppNavigator.tsx
mobile/src/services/: api.ts  auth.ts  chat.ts  family.ts  modules.ts  pdf.ts
mobile/src/store/: authStore.ts  chatStore.ts  dataStore.ts
mobile/src/theme/: colors.ts  recipeVisuals.ts  typography.ts
mobile/src/types/: api.ts  chat.ts
mobile/src/utils/: dates.ts
(+18 files in other folders)
